--- a/css/main.css
+++ b/css/main.css
@@ -246,7 +246,7 @@ footer h3 {
 }
 
 #services .card {
-  height: 320px;
+  min-height: 320px;
 }
 
 #testimonials .card {
@@ -751,6 +751,11 @@ p {
   .navbar-nav .secondary-btn.ml-3 {
     margin: 0 !important;
   }
+
+  .chart-elements .chart-item {
+    width: 50%;
+    padding: 1rem;
+  }
 }
 
 @media screen and (max-width: 780px) {
@@ -880,6 +885,11 @@ p {
   .stat-count {
     text-align: center;
     margin-top: 10px;
+  }
+
+  .chart-elements .chart-item {
+    width: 100%;
+    padding: 1rem;
   }
 }
 
