--- a/css/main.css
+++ b/css/main.css
@@ -113,6 +113,11 @@ h1 {
   background-attachment: fixed;
 }
 
+#showcase.about-showcase {
+  background: url("../img/about-showcase.jpg") top center/cover no-repeat !important;
+  background-attachment: fixed !important;
+}
+
 #showcase.services-showcase {
   background: url("../img/services-showcase.jpg") bottom center/cover no-repeat !important;
   background-attachment: fixed !important;
@@ -170,6 +175,7 @@ h1 {
   color: var(--text-color);
   margin: 2rem 0;
   font-family: "ModernEra-Medium";
+  max-width: 90%;
 }
 
 #whatwedo span,
@@ -183,7 +189,9 @@ h1 {
 #case-study-b h2,
 #case-study-c h2,
 #blog-a h2,
-#contact-a h2 {
+#contact-a h2,
+#about-a h2,
+#team-a h2 {
   text-align: center;
 }
 
@@ -217,6 +225,8 @@ h1 {
 
 #whatwedo h2,
 #about h2,
+#about-b h2,
+#team-b h2,
 #stats h2,
 #services h2,
 #contact h2,
@@ -232,7 +242,9 @@ h1 {
 #case-study-c h2,
 #blog-a h2,
 #post-a h2,
-#contact-a h2 {
+#contact-a h2,
+#about-a h2,
+#team-a h2 {
   font-family: "ModernEra-ExtraBold";
   font-size: 2rem;
   color: var(--primary-color) !important;
@@ -261,6 +273,8 @@ h1 {
 
 #whatwedo h3,
 #about h3,
+#about-b h3,
+#team-b h3,
 #services h3,
 #testimonials h3,
 #services-b h3,
@@ -270,6 +284,8 @@ h1 {
 #case-studies-b h3,
 #case-study-c h3,
 #blog-a h3,
+#about-a h3,
+#team-a h3,
 footer h3 {
   font-family: "ModernEra-Bold";
   font-size: 1.3rem;
@@ -289,7 +305,9 @@ footer h3 {
 #case-study-b .card,
 #case-study-c .card,
 #blog-a .card,
-#contact-a .card {
+#contact-a .card,
+#about-a .card,
+#team-a .card {
   box-shadow: 2px 2px 5px rgb(0, 0, 0, 0.2);
   margin-top: 50px;
   padding: 1rem 0;
@@ -314,7 +332,9 @@ footer h3 {
 #case-study-b .card,
 #case-study-c .card,
 #blog-a .card,
-#contact-a .card {
+#contact-a .card,
+#about-a .card,
+#team-a .card {
   height: fit-content;
 }
 
@@ -350,7 +370,9 @@ footer h3 {
 }
 
 #about,
-#contact {
+#about-b,
+#contact,
+#team-b {
   margin-top: 100px;
   min-height: 400px;
 }
@@ -371,7 +393,9 @@ footer {
 #case-study-b,
 #case-study-c,
 #blog-a,
-#contact-a {
+#contact-a,
+#about-a,
+#team-a {
   margin-top: 100px;
 }
 
@@ -382,6 +406,13 @@ footer {
   background: url("../img/about.jpg") center center/cover no-repeat;
   height: 400px;
 }
+#about-b #about-img {
+  background: url("../img/about-b.jpg") center center/cover no-repeat;
+}
+
+#team-b #team-img {
+  background: url("../img/team-b.jpg") center center/cover no-repeat;
+}
 
 #contact-img {
   background: url("../img/contact.jpg") center center/cover no-repeat;
@@ -389,6 +420,7 @@ footer {
 
 #about-img::after,
 #contact-img::after,
+#team-img::after,
 #newsletter-img::after {
   content: "";
   position: absolute;
@@ -409,14 +441,16 @@ footer {
 
 #about-content,
 #contact-content,
-#newsletter-content {
+#newsletter-content,
+#team-content {
   padding: 1rem 0;
   min-height: 400px;
 }
 
 #about-content p,
 #contact-content p,
-#newsletter p {
+#newsletter p,
+#team-content p {
   margin: 20px 0;
 }
 
@@ -822,6 +856,36 @@ nav.case-nav {
   display: inline-block;
 }
 
+.founder-desc {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.founder-img {
+  width: 50%;
+}
+
+.founder-detail {
+  width: 50%;
+}
+
+.founder-detail h3 {
+  margin-bottom: 0 !important;
+}
+
+.founder-info {
+  display: block;
+  font-weight: bold;
+  color: var(--secondary-color);
+  margin-bottom: 20px;
+}
+
+.founder-img img {
+  display: block;
+  width: 100%;
+}
+
 #post-img {
   width: 100%;
   max-height: 400px;
@@ -960,7 +1024,8 @@ nav.case-nav {
 
   #about-content,
   #contact-content,
-  #newsletter-content {
+  #newsletter-content,
+  #team-content {
     padding: 1rem 1.5rem !important;
   }
 
@@ -1028,7 +1093,8 @@ nav.case-nav {
 
   #about-content,
   #newsletter-content,
-  #contact-content {
+  #contact-content,
+  #team-content {
     padding: 2rem !important;
   }
 
@@ -1039,6 +1105,8 @@ nav.case-nav {
 
   #whatwedo h2,
   #about h2,
+  #about-b h2,
+  #team-b h2,
   #stats h2,
   #services h2,
   #contact h2,
@@ -1125,7 +1193,8 @@ nav.case-nav {
 
   #about-content,
   #contact-content,
-  #newsletter-content {
+  #newsletter-content,
+  #team-content {
     min-height: fit-content !important;
     margin-bottom: 10px;
   }
